Resolve inheritance problem with Person,Patient and Doctor